--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "handlebars": "^4.0.6",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "socket.io": "^1.7.1"
