--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "handlebars": "^4.0.6",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
+    "request": "^2.81.0",
     "socket.io": "^1.7.1"
   },
   "devDependencies": {
